--- a/src/app/audit/audit.component.html
+++ b/src/app/audit/audit.component.html
@@ -2,13 +2,13 @@
   <nz-header class="nav">
     <app-nav>
       <ul nz-menu nzMode="horizontal" style="line-height: 59px">
-        <li nz-menu-item nzMatchRouter routerLink="logined">
+        <li nz-menu-item nzMatchRouter routerLink="logins">
           <span nz-icon nzType="login" nzTheme="outline"></span>
-          登录
+          Logins
         </li>
         <li nz-menu-item nzMatchRouter routerLink="operates">
           <span nz-icon nzType="history" nzTheme="outline"></span>
-          操作
+          Operates
         </li>
       </ul>
     </app-nav>
