--- a/src/common/components/nav/profile/profile.component.html
+++ b/src/common/components/nav/profile/profile.component.html
@@ -201,7 +201,7 @@
                 </span>
               </nz-descriptions-item>
               <nz-descriptions-item nzTitle="Last Login Time">
-                {{ history.timestamp | date: 'long' }}
+                {{ history.timestamp | date: 'medium' }}
               </nz-descriptions-item>
               <nz-descriptions-item nzTitle="IP">
                 <span> {{ history.metadata.client_ip }}</span>
